--- a/styles/styles.css
+++ b/styles/styles.css
@@ -38,7 +38,7 @@ img {
 }
 
 .container {
-    width: 1158px;
+    width: 426px;
     padding-left: 15px;
     padding-right: 15px;
     margin: 0 auto;
@@ -150,25 +150,25 @@ img {
 
 .hero {
     background-color: #2E2F42;
-    background-image: var(--grad), url(../images/hero-bg.jpeg); 
+    background-image: var(--grad), url(../images/hero-bg-img.jpeg); 
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    padding-top: 188px ;
-    padding-bottom: 188px;
+    padding-top: 112px ;
+    padding-bottom: 112px;
     margin: 0 auto;
-    width: 1440px;
+    min-width: 426px;
 }
 
 .hero-title {
-    font-size: 56px;
-    line-height: 1.07;
+    font-size: 36px;
+    line-height: 1.11;
     text-align: center;
     letter-spacing: 0.02em;
     color: #FFFFFF;
     margin: 0 auto;
-    max-width: 496px;
-
+    max-width: 320px;
+    text-transform: capitalize;
 }
 
 .hero-button {
@@ -184,7 +184,7 @@ img {
     cursor: pointer;
     min-width: 169px;
     height: 56px;
-    margin: 48px auto 0;
+    margin: 72px auto 0;
     display: block;
     border: none;
     transition-property: background;
@@ -200,45 +200,34 @@ img {
 /**--------------FUTURE--------------**/
 
 .features {
-    padding-top: 120px;
-    padding-bottom: 120px;
-}
-
-.feat-list {
-    display: flex;
-    gap: 24px;
+    padding-top: 96px;
+    padding-bottom: 96px;
 }
 
 .feat-list-item{
-    width: 264px;
-}
-
-.feat-soc-link {
-    display: flex;
-    background-color: #F4F4FD;
-    border-radius: 4px;
-    width: 100%;
-    height: 112px;
+    margin-bottom: 72px;
     align-items: center;
-    justify-content: center;
-    margin-bottom: 8px;
+    width: 396px;
 }
 
 .list-title {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    text-align: center;
     letter-spacing: 0.02em;
-    color: #2E2F42;
+    text-transform: capitalize;
+    color: #2E2F42; 
     margin-bottom: 8px;
 }
 
 .list-text {
+    font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
-    width: 264px;
+    width: 100%;
 }
 /**---------------GALLERY---------------**/
 
