--- a/styles/media.css
+++ b/styles/media.css
@@ -2,6 +2,10 @@
     .container {
         width: 426px;
     }
+
+    .modal {
+        max-width: 392px;
+    }
 }
 
 
@@ -51,7 +55,7 @@
         width: 100%;
         height: 4px;
         left: 0;
-        top: 46.5px;
+        top: 41.5px;
         background: #404BBF;
         border-radius: 2px;
     }
@@ -68,14 +72,15 @@
         font-family: inherit;
         font-style: normal;
         font-weight: 400;
-        font-size: 16px;
-        line-height: 1.5;
-        letter-spacing: 0.02em;
+        font-size: 12px;
+        line-height: 1.17;
+        letter-spacing: 0.04em;
         color: #434455;
         transition-property: color;
         transition-duration: 250ms;
         transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
         position: relative;
+
     }
 
     .header-mail:hover,
@@ -114,6 +119,10 @@
 
     .hero-button {
         margin: 36px auto 0;
+    }
+
+    .modal {
+        max-width: 408px;
     }
 
     /**--------------FUTURE--------------**/
@@ -222,6 +231,12 @@
     .header-address-list {
         display: flex;
         gap: 40px;
+    }
+
+    .header-mail {
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
     }
 
     .current::after {
